--- a/SelahSeries/Views/Shared/_Layout.cshtml
+++ b/SelahSeries/Views/Shared/_Layout.cshtml
@@ -16,14 +16,13 @@
         @RenderSection("AddMetaTags", required: false)
     }
 
-    <environment include="Development">
+    <environment include="Development,Production">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Oswald:400,700">
         <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/bootstrap4/bootstrap.min.css">
         <link href="~/NewFolder2/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="~/NewFolder2/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
         <link rel="stylesheet" type="text/css" href="~/NewFolder2/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
         <link rel="stylesheet" type="text/css" href="~/NewFolder2/plugins/OwlCarousel2-2.2.1/animate.css">
-        <link rel="stylesheet" type="text/css" href="~/NewFolder2/plugins/jquery.mb.YTPlayer-3.1.12/jquery.mb.YTPlayer.css">
 
         @if (IsSectionDefined("AddToHead"))
         {
@@ -35,7 +34,7 @@
 
 
     </environment>
-    <environment exclude="Development">
+    <environment exclude="Development,Production">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
               asp-fallback-href="~/NewFolder2/styles/bootstrap4/bootstrap.min.jsstyles/bootstrap4/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
@@ -279,7 +278,7 @@
 
         }
     </div>
-    <environment include="Development">
+    <environment include="Development,Production">
         <script src="~/NewFolder2/js/jquery-3.2.1.min.js"></script>
         <script src="~/NewFolder2/styles/bootstrap4/popper.js"></script>
         <script src="~/NewFolder2/styles/bootstrap4/bootstrap.min.js"></script>
@@ -293,7 +292,7 @@
             @RenderSection("AddToEnd", required: false)
         }
     </environment>
-    <environment exclude="Development">
+    <environment exclude="Development,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
                 asp-fallback-src="~/NewFolder2/js/jquery-3.2.1.min.js"
                 asp-fallback-test="window.jQuery"
