--- a/SelahSeries/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/SelahSeries/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,8 +1,8 @@
-<environment include="Development">
+<environment include="Development,Production">
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </environment>
-<environment exclude="Development">
+<environment exclude="Development,Production">
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"
             asp-fallback-src="~/lib/jquery-validation/dist/jquery.validate.min.js"
             asp-fallback-test="window.jQuery && window.jQuery.validator"
