--- a/SelahSeries/Views/Shared/Error.cshtml
+++ b/SelahSeries/Views/Shared/Error.cshtml
@@ -4,5 +4,5 @@
 }
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2 class="text-danger">An error occurred while processing your request.: @ViewBag.Error</h2>
 
