--- a/SelahSeries/Views/EMI/ReadMore.cshtml
+++ b/SelahSeries/Views/EMI/ReadMore.cshtml
@@ -34,23 +34,35 @@
                 <div class="welcome_texte">
                     <h4 text-align="center">Welcome to Emerald Light Initiative</h4>
                     <p>
-                        Many teen girls and youths, through youthful exuberance or circumstances beyond their controls landed in the motherhood, totally unprepared. Most parents, being disappointed and deeply hurt by their tenagers' acts take some stances that are detrimental to the future of these teens and the unborn children. The society shame and shun them. They cannot move freely talk less of going back to school or attend ante-natal appointments because of the toxic attitudes of the society to them. They become stranded, depressed and vulnerable. With no where to turn, some commit suicide while some are thrown to the boys who impregnated them or to his family. There, they suddenly become wives
-                        and mothers. Most of these girls die from domestic violence, during child birth or suffer serious complications and losses. With the support of their families and friends gone into the thin air, they are left to face the cruelty of life, some with their children!
+                        Many teen girls, through youthful exuberance or circumstances beyond their controls landed in the motherhood, much unprepared. Most parents, being disappointed and deeply hurt by their teenagers’' acts take some stances that are detrimental to the future of these teens and their unborn children. The society shame and shun them. They cannot move freely talk less of going back to school or attend antenatal appointments because of the toxic attitudes of the society to them. They become stranded, depressed and vulnerable. With nowhere to turn, some commit suicide while some are thrown to the boys who impregnated them or to his family. There, they suddenly become wives and mothers. Most of these girls die from domestic violence, during childbirth or suffer serious complications and losses. With the support of their families and friends gone into the thin air, they are left to face the cruelty of life, some with their children!
+                        Some of these girls do not make it back to school or continue the apprenticeship they once enrolled in. Life becomes difficult for them and their babies.
+
                     </p>
                     <p>
-                        Some of these girls don't make it back to school or continue the apprenticeship they once enrolled in. Life becomes difficult for them and their babies.
-                        Although, many studies have shown that many factors contribute to the increasing number of teen pregnancy in our society, we only want to dump our anger on these culprits who have disappointed us. Meanwhile many teens and youths are commiting abortion to escape our wrath, whereby, many have lost their lives during this process.
-                        Most times, we forget that it takes two to tangle. We spare the boys who impregnated them since they don't carry pregnancy. Aren't we a bias society?
+                        Although, many studies have shown that many factors contribute to the increasing number of teen pregnancy in our society, we only want to dump our anger on these culprits who have disappointed us, leaving other contributory stones unturned. Meanwhile many teen girls are committing abortion to escape our wrath, whereby, many have lost their lives during this process.
+                        Most times, we forget that it takes two to tangle. We spare the boys who impregnated them since they do not carry pregnancy. Aren't we a bias society?
                     </p>
                     <p>
                         Emerald Light Intiative is established to give these teen girls second chance to life by:
                     </p>
-                    <ol>
-                        <li>Advocating against the brutal stigmatization and stereotyping mounted on them by our society</li>
-                        <li>Giving mental, social, emotional, educational, financial support and empowerment to give them opportunities to find themselves and their future again.</li>
-                    </ol>
-
-
+                    <ul>
+                        <li>	Raising awareness about the detrimental effect of stigmatization.</li>
+                        <li>	Raising awareness about the prevention of early pregnancy through sex education and abstinence.</li>
+                        <li>	Advocating against the brutal stigmatization and stereotyping mounted on them by our society and through unfavourable government policies.</li>
+                        <li>	Offering mental, social, emotional support through:</li>
+                        <ul>
+                            <li>	Counselling (on/offline) for teens and their parents/families</li>
+                            <li>	Creating support group for teens and parents/families</li>
+                            <li>	Establishing mentorship program spearheaded by those who were once “victims”</li>
+                            <li>	Provision of accompanier to their first two ante-natal and  post-natal visits</li>
+                        </ul>
+                        <li>	Offering  educational and  financial empowerment</li>
+                        <ul>
+                            <li>	Offering afterschool coaching </li>
+                            <li>	Financial assistant towards schooling, trading or apprenticeship re-enrolment</li>
+                        </ul>
+                        <li>	Collaborating with other NGOs with related visions to help these teens find themselves and their future again, as well as to give their children a better platform to blossom.</li>
+                    </ul>
                 </div>
 
                 <br />
